# CardLens

./: .env.example  .env.upload.example  .gitignore  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.claude/: launch.json
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.ts
apps/web/public/: manifest.webmanifest  sw.js
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: CameraCapture.tsx  CardTile.tsx  ConfidenceBar.tsx  LanguageToggle.tsx  ResultPanel.tsx
apps/web/src/lib/: api.ts  i18n.tsx  types.ts
apps/web/src/lib/locales/: en.ts  es.ts
apps/web/src/pages/: CardPage.tsx  CollectionPage.tsx  ScanPage.tsx  SearchPage.tsx
core/recognizer/: Cargo.toml
core/recognizer/examples/: detect_dump.rs  ocr_dump.rs  smoke.rs
core/recognizer/src/: detector.rs  embedder.rs  index.rs  lib.rs  ocr.rs  preprocess.rs
docs/: ARCHITECTURE-MOBILE.md  ARCHITECTURE.md
landing/: index.html
scripts/: dev.ps1  ingest.ps1  stage-android-resources.ps1  stage-desktop-resources.ps1  upload_catalog.py  upload_landing.py
services/api/: Cargo.toml  Dockerfile  README.md
services/api/migrations/: 0001_init.sql  0002_tags.sql  0003_unique_collection_card.sql
services/api/src/: config.rs  engine.rs  error.rs  lib.rs  main.rs  ml_client.rs  models.rs
services/api/src/providers/: mod.rs  null.rs  tcgdex.rs
services/api/src/routes/: cards.rs  collection.rs  health.rs  mod.rs  prices.rs  scan.rs  scans.rs  sets.rs  tags.rs
services/ml/: Dockerfile  README.md  requirements.txt
services/ml/app/: __init__.py  config.py  main.py
services/ml/app/pipeline/: __init__.py  detector.py  embedder.py  fusion.py  index.py  ocr.py
services/ml/ingest/: __init__.py  build_index.py  catalog_source.py  ingest_catalog.py
